--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,10 @@
+<! DOCTYPE html>
+<html>
+  <head>
+    <title>Instagram Reels</title>
+  </head>
+  <body>
+
 <div id="root"></div>
+    </body>
+  </html>
